@@ -8,7 +8,7 @@
  *   pqxx::robusttransaction is a slower but safer transaction class
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/robusttransaction instead.
  *
- * Copyright (c) 2002-2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2002-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -23,6 +23,10 @@
 #include "pqxx/compiler-internal-pre.hxx"
 
 #include "pqxx/dbtransaction"
+
+#ifdef PQXX_QUIET_DESTRUCTORS
+#include "pqxx/errorhandler"
+#endif
 
 
 /* Methods tested in eg. self-test program test001 are marked with "//[t1]"
@@ -161,7 +165,7 @@ public:
   virtual ~robusttransaction() throw ()
   {
 #ifdef PQXX_QUIET_DESTRUCTORS
-    disable_noticer Quiet(conn());
+    quiet_errorhandler quiet(conn());
 #endif
     End();
   }
