@@ -8,7 +8,7 @@
  *   pqxx::transaction represents a standard database transaction
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/transaction instead.
  *
- * Copyright (c) 2001-2008, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -23,6 +23,10 @@
 #include "pqxx/compiler-internal-pre.hxx"
 
 #include "pqxx/dbtransaction"
+
+#ifdef PQXX_QUIET_DESTRUCTORS
+#include "pqxx/errorhandler"
+#endif
 
 
 
@@ -107,7 +111,7 @@ public:
   virtual ~transaction() throw ()
   {
 #ifdef PQXX_QUIET_DESTRUCTORS
-    disable_noticer Quiet(conn());
+    quiet_errorhandler quiet(conn());
 #endif
     End();
   }
