@@ -299,7 +299,7 @@ void pqxx::largeobjectaccess::open(openmode mode)
 void pqxx::largeobjectaccess::close() throw ()
 {
 #ifdef PQXX_QUIET_DESTRUCTORS
-  disable_noticer Quiet(m_Trans.conn());
+  quiet_errorhandler quiet(m_Trans.conn());
 #endif
   if (m_fd >= 0) lo_close(RawConnection(), m_fd);
 }
